force-app/main/default/objects/ContentVersion/fields/FSM_Do_not_send_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>FSM_Do_not_send_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created as part of SFS-4061 to indicate that the additional files created while creating pdf in gold sketchand simple sketch should not be sent</description>
    <label>Do not send to SAP</label>
    <type>Checkbox</type>
</CustomField>