force-app/main/default/objects/ContentVersion/fields/FSM_RelatedrecordId__c.field-meta.xml
<CustomField>
    <fullName>FSM_RelatedrecordId__c</fullName>
    <label>FSM Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>