force-app/main/default/objects/ContentVersion/fields/FSM_Sketch_Additional_Images__c.field-meta.xml
<CustomField>
    <fullName>FSM_Sketch_Additional_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4061 
to delete the images that are referred in the PDF for both Gold Sketch &amp; Simple Sketch</description>
    <label>Sketch Additional Images</label>
    <type>Checkbox</type>
</CustomField>