force-app/main/default/objects/ContentVersion/validationRules/FSM_FileSizeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_FileSizeValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT($Permission.FSM_Integration),ContentSize &gt; 6300000)</errorConditionFormula>
    <errorDisplayField>ContentSize</errorDisplayField>
    <errorMessage>File Size exceeds 6 MB</errorMessage>
</ValidationRule>